# userp

./: Makefile  Profiles  README.md  Userp.jpx  Userp.mm  test.c
.ib/: ib
c-libuserp/script/: CTap.c  CTap.h  CTap.pm  build_dist.pl
c-libuserp/src/: buf.c  dec.c  enc.c  env.c  scope.c  scopesym.c  userp.h  userp_buffer.c  userp_private.h
c-libuserp/t/lib/: TestUserp.pm
c-userptiny/: .gitignore  Makefile  config.h  unittest.c  userptiny.c  userptiny.h
c-userptiny/t/: 01-bits.c  02-decode-standard.c  lib
doc/: design.ltw  protocol.md  use-case-microcontroller-reporting.md  use-case-video-encoding.md
libuserp/: .gitignore  Makefile  README.md  configure
libuserp/automake/: Makefile.am  configure.ac  dev_rules.mak
libuserp/script/: CTap.h  CTap.pm  UnitTestGen.pm  build_dist.pl  generate_testcase.pl
libuserp/script/automake/: Makefile.am  configure.ac  dev_rules.mak
libuserp/scripts/: build_dist_tarball.pl
libuserp/src/: RBGen.pm  bitdec.c  bits.c  bstr.c  buf.c  config_plus.h  dec.c  diag.c  enc.c  env.c  hashtree.c  local.h  rbtree.c  rbtree.h  scope.c  scopesym.c  scopetype.c  userp.h  userp_buffer.c  userp_dec.c  userp_dec.h  userp_env.c  userp_private.h  userp_protected.h
libuserp/t/: 02-rbtree.c  diag.t
libuserp/t/lib/: CTap.c  CTap.h  CTap.pm  TestUserp.pm  tap.c
libuserp/test/: 01-v0-meta.c  03-env.c
old/c-lib/test/ITestCpp/: GdbIface.cpp  GdbIface.h  ITestCpp.cpp
old/c-lib/test/ITestCpp/html/: ExpandCollapse.js
old/c-lib/test/ITestCpp/scripts/: CflagSanityCheck.sh  JoinTests.sh  ShowInBrowser.sh
old/cpp-lib/: configure
old/cpp-lib/src/: BufferTracker.cpp  HeaderDefs.h  Makefile  Makefile.ib  Misc.cpp  OctetSequence.cpp  UserpType.cpp
old/cpp-lib/tests/: BufTracker_c.c  Makefile
old/java-lib-1/: Userp.jpx
old/java-lib-1/src/com/silverdirk/userp/: AnyType.java  ArrayType.java  BufferChainIStream.java  CodecImpl.java  IntegerType.java  RecordType.java  ScalarType.java  TupleCoding.java  UnionType.java  Userp.java  UserpReader.java  UserpWriter.java  Util.java  _TestCodecs.java  _TestTypeEquality.java  _TestUserpEncoderDecoder.java  _Test_Package.java
old/java-lib-2/: Userp.jpx
old/java-lib-2/src/com/silverdirk/userp/: AnyType.java  ArrayType.java  CommonTypes.java  EnumType.java  IntegerType.java  Symbol.java  TupleType.java  UninitializedTypeException.java  UnionType.java  UserpDecoder.java  UserpEncoder.java  UserpReader.java  UserpWriter.java  Util.java  _TestCodecs.java  _Test_Package.java
perl-Userp/lib/Userp/: Bits.pm  Buffer.pm  Decoder.pm  Encoder.pm  Error.pm  MultiBuffer.pm  RootTypes.pm  Scope.pm  StreamReader.pm  StreamWriter.pm  Type.pm
perl-Userp/lib/Userp/PP/: Bits64.pm  Decoder.pm  Encoder.pm  Scope.pm  ScopeImpl.pm  Type.pm
perl-Userp/lib/Userp/PP/Type/: Array.pm  Choice.pm  Enum.pm  Integer.pm  Record.pm  Sequence.pm  Symbol.pm  Union.pm
perl-Userp/lib/Userp/StreamWriter/: Block.pm
perl-Userp/lib/Userp/Type/: Any.pm  Array.pm  Choice.pm  Integer.pm  Record.pm  Symbol.pm  Type.pm
perl-Userp/lib/Userp/Type/Record/: Field.pm
perl-Userp/t/: 01-bits.t  02-buffer.t  10-int-encoding-utils.t  10-int-types.t  13-array-types.t  14-record-types.t  19-scope.t  20-encode-int.t  21-encode-symbol.t  22-encode-type.t  23-encode-array.t  24-encode-record.t  30-decode-int.t
src/: BufferTracker.cpp  BufferTracker.h  Makefile  Misc.h  OctetSequence.cpp  OctetSequence.h  RBTree.c  RBTree.h  UserpType.h
src/com/silverdirk/userp/: AnyType.java  ArrayType.java  BufferChainIStream.java  ByteReservoir.java  ByteSequence.java  Codec.java  CodecBuilder.java  CodecImpl.java  CodecOverride.java  CustomCodec.java  EnumType.java  ForwardOptimizedIndexedByteSequence.java  IntegerType.java  LibraryLimitationException.java  PartialType.java  Protocol.java  RangeType.java  ReaderWriterImpl.java  RecordType.java  SlidingByteSequence.java  TupleType.java  TypeDef.java  TypeSpace.java  TypeType.java  TypedData.java  UnionType.java  UserCodec.java  Userp.java  UserpDataReader.java  UserpDecoder.java  UserpEncoder.java  UserpFileReader.java  UserpProtocolException.java  UserpReader.java  UserpType.java  UserpWriter.java  Util.java  ValRegister.java  WholeType.java  _TestBufferChainIStream.java  (+11 more)
test/ITestCpp/: ITestCpp.h  ResultWriter.cpp  ResultWriter.h
test/ITestCpp/html/: Page.css  Widgets.css
test/UnitTests/: Global.cpp  Test_RBTree.cpp
tests/: BufTracker_c
